<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Papps</string>
    <string name="apps">Apps</string>
    <string name="games">Games</string>

    <!-- MultableLiveData -->
    <string name="multable_live_data_int">%d</string>
    <string name="multable_live_data_int_with_percentage">%1$d \%%</string>

    <!-- Drawer -->
    <!-- Drawer Header -->
    <string name="drawer_header_title">@string/app_name</string>

    <!-- Drawer Items -->
    <string name="app_name_random_letter">Random Letter</string>
    <string name="app_name_random_number">Random Number</string>
    <string name="app_name_nasa_picture_of_the_day">Nasa - Picture of the Day</string>
    <string name="app_name_tip">Tip</string>
    <string name="app_name_cronometer">Cronometer</string>
    <string name="app_name_timer">Timer</string>
    <string name="app_name_click_counter">Click Counter</string>
    <string name="app_name_money_converter">Money Exchange</string>
    <string name="app_name_dices">Dice</string>
    <string name="app_name_coin_flipper">Heads and Tails</string>
    <string name="app_name_unscramble">Unscramble (pt-BR)</string>
    <string name="app_name_tic_tac_toe">Tic Tac Toe</string>
    <string name="app_name_rock_paper_scissors">Rock Paper Scissors</string>
    <string name="app_name_body_mass_index">BMI - Body Mass Index</string>
    <string name="app_name_speed_test">Internet Test</string>
    <string name="app_name_random_quote">Random Quote (pt-BR)</string>

    <!-- Drawer Bottom Items -->
    <string name="settings">Settings</string>

    <!-- Settings -->
    <string name="privacy_policy">Privacy policy</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="clear_all_data_description">This action will delete all records and history related to all apps and games.</string>
    <string name="clear_all_data_confirmation">All data has been deleted</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_choose_email_client">"Choose the mail provider…"</string>
    <string name="send_feedback_error">There was an error when trying to open your default mail app</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rocket_mini_logo_description">Rocket mini logo</string>

    <!-- Dialogs -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- Warnings -->
    <string name="no_internet_connection_warning">No internet connection available</string>
    <string name="internet_connection_found">Connected to the internet</string>
    <string name="unexpected_error">Unexpected error occurred</string>

    <!-- Home -->
    <string name="home_click_here">Click here\nto start\nthe adventure!</string>
    <string name="easter_egg_activated">Easter Egg activated</string>
    <string name="easter_egg_already_activated">Easter Egg already activated</string>

    <!-- All Apps and Games -->
    <string name="zero">0</string>
    <string name="zero_decimal">$ 0.00</string>
    <string name="one">1</string>
    <string name="ten">10</string>
    <string name="ten_percent">10 %</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="reset">Reset</string>
    <string name="cipher">$ </string>
    <string name="value_with_cipher">\u0024 %1$s</string>
    <string name="x_separator">X</string>
    <string name="equal_separator">=</string>
    <string name="clicks">Clicks</string>
    <string name="click_anywhere">Click anywhere in the screen!</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="highScore">Record</string>
    <string name="current_score">Current score</string>
    <string name="one_player_mode">1 player</string>
    <string name="two_player_mode">2 players</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="downloading">Downloading …</string>
    <string name="downloading_video">Video download deactivated</string>
    <string name="image_downloading">Downloading %1$s</string>
    <string name="image_downloaded">%1$s Downloaded</string>
    <string name="mbps">Mbps</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>

    <!-- All Apps -->
    <!-- Body mass index -->
    <string name="underweight_bmi">\u003C 18.5</string>
    <string name="normal_bmi">18.5 a 24.9</string>
    <string name="overweight_bmi">24.9 a 30</string>
    <string name="obese_bmi">\u003E 30</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="cmi_result">Your BMI is</string>

    <!-- Click Counter -->
    <!-- Dice -->

    <!-- Money Converter -->
    <string name="ars_cypher">ARS</string>
    <string name="brl_cypher">BRL</string>

    <!-- Nasa Picture Of The Day -->
    <string name="nasa_picture_of_the_day_picture_automatic_download_message">Automatic download</string>
    <string name="nasa_picture_of_the_day_hdurl_picture_contentDescription">Full HD image</string>

    <!-- Random Quote -->
    <!-- Random Letter -->

    <!-- Random Number -->
    <string name="random_number_min_higher_than_max">Max must be higher than Min</string>
    <string name="random_number_no_input_found">Min and Max cannot be empty</string>

    <!-- Speed Test -->
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="network_type">Type:</string>
    <string name="public_ip">Public IP:</string>
    <string name="region">Region:</string>

    <!-- Tip -->
    <string name="tip_round_up_tip_text">Round up Tip</string>
    <string name="tip_round_up_total_text">Round up Total</string>
    <string name="tip_value_hint"><font size="12">Type the bill value, ex: $ 37.50</font></string>
    <string name="tip_total">Total</string>

    <!-- Timer -->
    <string name="timer_plus_five">+5</string>
    <string name="timer_minus_five">-5</string>
    <string name="timer_plus_ten">+10</string>
    <string name="timer_minus_ten">-10</string>

    <!-- All Games -->
    <!-- Coin Flipper -->
    <string name="coin_flipper_win_or_lose">Win ou Lose?</string>
    <string name="coin_flipper_choice">Choose one option bellow</string>
    <string name="coin_flipper_heads">Heads</string>
    <string name="coin_flipper_tails">Tails</string>

    <!-- Rock Paper Scissors -->
    <string name="rock_paper_scissors_app_choice">App Choice</string>

    <!-- Tic Tac Toe -->

    <!-- Unscramble -->
    <string name="unscramble_instruction">Unscramble the letters above to form a word</string>
    <string name="unscramble_hint">Type the correct word here</string>

    <!-- String Input Formats
    String      -> %1$s
    Integer     -> %1$d
    Double      -> %1$f
    Hexadecimal -> %1$x
    Octal       -> %1$o
    BigDecimal  -> %1$g
    -->
</resources>