<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_click_counter"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/click_counter_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_edges"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/click_counter_text_clicks" />

        <TextView
            android:id="@+id/click_counter_text_clicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clicks"
            android:textSize="@dimen/font_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/click_counter_addition_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0" />

        <TextView
            android:id="@+id/click_counter_click_anywhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_edges"
            android:text="@string/click_anywhere"
            android:textSize="@dimen/font_size_normal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/click_counter_reset_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/click_counter_reset_button"
            android:background="@drawable/general_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_edges"
            android:layout_marginBottom="@dimen/margin_edges"
            android:text="@string/reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>