<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/coin_flipper_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/coin_flipper_title"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coin_flipper_result_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        android:layout_marginTop="128dp"
        android:src="@drawable/ic_empty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin_flipper_title" />

    <TextView
        android:id="@+id/coin_flipper_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="22sp"
        android:text="@string/coin_flipper_win_or_lose"
        app:layout_constraintStart_toStartOf="@+id/coin_flipper_result_image"
        app:layout_constraintEnd_toEndOf="@+id/coin_flipper_result_image"
        app:layout_constraintTop_toBottomOf="@+id/coin_flipper_result_image">
    </TextView>

    <TextView
        android:id="@+id/coin_flipper_app_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/zero"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@+id/coin_flipper_score_separator"
        app:layout_constraintEnd_toEndOf="@+id/coin_flipper_score_separator"
        app:layout_constraintBottom_toTopOf="@+id/coin_flipper_score_separator" />

    <TextView
        android:id="@+id/coin_flipper_score_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_separator"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/coin_flipper_result_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coin_flipper_result_image"
        app:layout_constraintBottom_toBottomOf="@+id/coin_flipper_result_image" />

    <TextView
        android:id="@+id/coin_flipper_self_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/zero"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@+id/coin_flipper_score_separator"
        app:layout_constraintEnd_toEndOf="@+id/coin_flipper_score_separator"
        app:layout_constraintTop_toBottomOf="@+id/coin_flipper_score_separator" />

    <TextView
        android:id="@+id/coin_flipper_choice_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coin_flipper_choice"
        android:textSize="24sp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin_flipper_result" />

    <ImageView
        android:id="@+id/coin_flipper_heads_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/coin_flipper_heads"
        android:background="@drawable/coin_flipper_heads"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/coin_flipper_tails_image"
        app:layout_constraintTop_toBottomOf="@+id/coin_flipper_choice_text"/>

    <ImageView
        android:id="@+id/coin_flipper_tails_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/coin_flipper_tails"
        android:background="@drawable/coin_flipper_tails"
        app:layout_constraintStart_toEndOf="@+id/coin_flipper_heads_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coin_flipper_heads_image"
        app:layout_constraintBottom_toBottomOf="@+id/coin_flipper_heads_image" />

    <Button
        android:id="@+id/coin_flipper_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>